--- a/arch/arm/boot/dts/zynq-zed-adv7511-ad7768.dts
+++ b/arch/arm/boot/dts/zynq-zed-adv7511-ad7768.dts
@@ -12,7 +12,7 @@
 
 #include "zynq-zed.dtsi"
 #include "zynq-zed-adv7511.dtsi"
-
+#include <dt-bindings/gpio/gpio.h>
 
 / {
 	vref: regulator-vref {
@@ -71,6 +71,7 @@
 		reg = <0>;
 		spi-max-frequency = <1000000>;
 
+		reset-gpios = <&gpio0 94 GPIO_ACTIVE_HIGH>;
 		vref-supply = <&vref>;
 		clocks = <&ad7768_mclk>;
 		clock-names = "mclk";
